# DDinterchange

./: CMakeLists.txt  README.txt  dd_exchange.cpp  dd_exchange.hpp  main.cc  peg-solitaire.cc  peg-solitaire.cpp  sdd_essentials.h  sdd_essentials.hpp  sdd_sat_enum.hpp  sddextra.cc  sddextra.h  sylvan_dd.cc  sylvan_dd.h  test.cpp
dd_interchange/: sdd_essentials.h  sylvan_dd.cc  sylvan_dd.h
examples/: test1.cc  test2.cc
